<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/swapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/combo" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:layout_toLeftOf="@+id/swapButton"
        android:ems="10"
        android:hint="@string/nameHint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/phraseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameEditText"
        android:layout_alignBottom="@+id/nameEditText"
        android:layout_toRightOf="@+id/swapButton"
        android:ems="10"
        android:hint="@string/phraseHint" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/nameEditText"
        android:layout_below="@+id/nameEditText"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/ageHint" />

    <EditText
        android:id="@+id/otherEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ageEditText"
        android:layout_alignLeft="@+id/phraseEditText"
        android:ems="10"
        android:hint="@string/otherHint" />

</RelativeLayout>